app3/deployment3.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app3
  namespace: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginxdemos/hello:plain-text
#        image: nginxinc/nginx-unprivileged
        ports:
        - containerPort: 80
        securityContext:
          privileged: true
