app3/service3.yml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: app3
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: app3
