app3/np-allow_egress_clients.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-clients
  namespace: app3
spec:
  podSelector:
    matchLabels:
      env: client
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: app3
