app3/np-allow_ingress_clients.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-clients
  namespace: app3
spec:
  podSelector:
    matchLabels:
      app: app3
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            env: client
