app3/np-denyegress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: app3
spec:
  podSelector: {}
  policyTypes:
  - Egress
