app3/np-denyingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: app3
spec:
  podSelector: {}
  policyTypes:
    - Ingress
